# cuda-nn

./: CMakeLists.txt  README.md  main.c
cuda/cnn/: CMakeLists.txt  activation_kernels.cu  cube.cu
include/cnn/: activations.h  avgpool_layer.h  cube.cuh  cuda_util.h  layer.h  network.h  print.h
src/cnn/: CMakeLists.txt  activations.c  avgpool_layer.c  cuda_util.c  layer.c  network.c  print.c
